test/error/ast/DeclarationNameHide.mod
MODULE DeclarationNameHide;
VAR x: INTEGER;

PROCEDURE P;
VAR x: INTEGER;
BEGIN
  x := 0;
END P;

END DeclarationNameHide.
